<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/chancesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chances"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/messagesTextView"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/messagesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/None"
        app:layout_constraintTop_toBottomOf="@+id/chancesTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editTextGuess"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextGuess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/Estimation"
        app:layout_constraintTop_toBottomOf="@+id/messagesTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/checkButton"
        android:layout_marginTop="16dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/checkButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/CheckString"
        app:layout_constraintTop_toBottomOf="@+id/editTextGuess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ResetString"
        app:layout_constraintTop_toBottomOf="@+id/checkButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>